--- a/GraphicInterface/GraphicInterface.csproj
+++ b/GraphicInterface/GraphicInterface.csproj
@@ -70,6 +70,18 @@
     <Compile Include="Add\ZealAdd.Designer.cs">
       <DependentUpon>ZealAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Apply\SupplyApplicationBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apply\SupplyApplicationBase.Designer.cs">
+      <DependentUpon>SupplyApplicationBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Apply\VaccineApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apply\VaccineApplication.Designer.cs">
+      <DependentUpon>VaccineApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +101,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Add\ZealAdd.resx">
       <DependentUpon>ZealAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apply\SupplyApplicationBase.resx">
+      <DependentUpon>SupplyApplicationBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apply\VaccineApplication.resx">
+      <DependentUpon>VaccineApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
